fix the project description overflow problem

--- a/style.css
+++ b/style.css
@@ -303,12 +303,24 @@ backdrop-filter: invert();
     display: grid;
     grid-template-rows: minmax(min-content, max-content) 1fr minmax(min-content, max-content);
     border: black solid 3px;
-    padding: 15px;
+    /* padding: 15px; */
     box-shadow: black 1px 1px, 2px 2px, 3px 3px;
+}
+
+.project h3 {
+    padding: 15px 15px 0px 15px;
+}
+
+.project .button-section {
+   padding: 0px 15px 15px 15px
 }
 
 .project p {
     color: #505050;
+    overflow-y: scroll;
+    font-size: 0.9em;
+    padding: 0px 15px 0px 15px;
+    /* text-align: justify; */
 }
 
 .project .button-section {
